quick spacing fix

--- a/css/styles.css
+++ b/css/styles.css
@@ -824,6 +824,7 @@ header {
   margin-top: 18%;
   align-items: center;
   float: right;
+  padding-bottom: 42px;
 }
 
 .landing .social a {
